Fix overflow issue of pokemon list in Y axis

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: Fredoka;
+  src: url(../assets/FredokaOne-Regular.ttf)
+    url(../assets/FredokaOne-Regular.ttf);
+}
+
 .App {
   text-align: center;
-  background-color: rgb(209, 211, 73);
   min-height: 100vh;
 }
 
