--- a/src/components/StartMenu.css
+++ b/src/components/StartMenu.css
@@ -5,6 +5,7 @@
   position: relative;
 }
 .map-preview-list {
+  margin-top: 10px;
   display: flex;
   gap: 1vw;
   justify-content: center;
